[package]
name = "hodl-backend"
license = "MIT"
version = "0.1.0"
authors = ["B <philoman@gmail.com>"]
edition = "2018"
description = "A bunch of helpful lints to avoid common pitfalls in Rust"
repository = "MIT OR Apache-2.0"
keywords = ["rocket", "framework", "templates", "templating", "engine"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.26", optional = true }
rocket =  { version = "0.5.0-rc", features = ["json"] }
tungstenite = "0.13.0"
url = "2.1.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

